rest/ip_messaging/v1/docs/ServicesUsersChannelsApi.md
# ServicesUsersChannelsApi

All URIs are relative to *https://ip-messaging.twilio.com*

Method | HTTP request | Description
------------- | ------------- | -------------
[**ListUserChannel**](ServicesUsersChannelsApi.md#ListUserChannel) | **Get** /v1/Services/{ServiceSid}/Users/{UserSid}/Channels | 



## ListUserChannel

> []IpMessagingV1UserChannel ListUserChannel(ctx, ServiceSidUserSidoptional)





### Path Parameters


Name | Type | Description
------------- | ------------- | -------------
**ctx** | **context.Context** | context for authentication, logging, cancellation, deadlines, tracing, etc.
**ServiceSid** | **string** | 
**UserSid** | **string** | 

### Other Parameters

Other parameters are passed through a pointer to a ListUserChannelParams struct


Name | Type | Description
------------- | ------------- | -------------
**PageSize** | **int64** | How many resources to return in each list page. The default is 50, and the maximum is 1000.
**Limit** | **int64** | Max number of records to return.

### Return type

[**[]IpMessagingV1UserChannel**](IpMessagingV1UserChannel.md)

### Authorization

[accountSid_authToken](../README.md#accountSid_authToken)

### HTTP request headers

- **Content-Type**: Not defined
- **Accept**: application/json

[[Back to top]](#) [[Back to API list]](../README.md#documentation-for-api-endpoints)
[[Back to Model list]](../README.md#documentation-for-models)
[[Back to README]](../README.md)

